<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NTHU Chat</string>
    <string name="school">Public</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3589269405021012/6743491039</string>
    <string name="prompt_id">Your iLMS ID</string>
    <string name="prompt_password">Your iLMS Password</string>
    <string name="error_invalid_email">This account is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="introduction">NTHU Chat is an UNOFFICAL app, and is NOT AFFILIATED with, ENDORSED or SUPPORT by NTHU \nIf you like this app, feel free to contribute on Github, or donate to make this app better</string>
    <string name="changeName">Change Nickname</string>
    <string name="change_name">Change Name (max 20 characters)</string>
    <string name="change_name_intro">Note: Previous your nickname of sent messages or created activity wouldn\'t change!</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="channels">Channels</string>
    <string name="courses">Courses</string>
    <string name="div">Department</string>
    <string name="emptymessage">You can be the first one to talk!</string>
    <string name="facebook">Facebook</string>

    <string name="inspiration">Inspiration</string>
    <string name="study">Study</string>
    <string name="entertainment">Amusement</string>
    <string name="social">Social</string>
    <string name="friends">Friends</string>
    <string name="discover">Map Discover</string>

    <string name="addFriend">Add Friend</string>
    <string name="showQrTextView">Scan to become buddy</string>
    <string name="addFriendSuccess">Successful</string>
    <string name="addFriendDuplicate">Friend has added!</string>
    <string name="share_location">Share Location</string>
    <string name="share_location_details">Enable it to use map discover function:)</string>
    <string name="addSocial">Add Social</string>
    <string name="addEntertainment">Add Amusement</string>
    <string name="addStudy">Add Study</string>
    <string name="addInspiration">Add Inspiration</string>
    <string name="BasicInfo">Basic information</string>
    <string name="activityName">Name</string>
    <string name="socialActivityHint">Ex: Lunch Meet with President</string>
    <string name="entertainmentActivityHint">Ex: Playing Badminton/Bridge</string>
    <string name="studyActivityHint">Ex: Form Study Group</string>
    <string name="inspirationActivityHint">Ex: Seminars/Arts/Performances</string>
    <string name="activityStartTime">Start date and time</string>
    <string name="activityEndTime">End date and time</string>
    <string name="activityPlace">Place</string>
    <string name="gpsLocation">GPS Location</string>
    <string name="activityAdditionalDetails">Additional Details</string>
    <string name="activityAdditionalDetailsText">Additional Info about the activity</string>
    <string name="done">Done</string>
    <string name="addSocialActivity">Add Social</string>
    <string name="drag">Please hold and drag me:)</string>
    <string name="error">Error</string>
    <string name="dateError">End date before start date!</string>
    <string name="formError">Please fill in activity name, date and location!</string>
    <string name="refresh">Refresh</string>
    <string name="Info">Info</string>
    <string name="delete">Delete</string>
    <string name="deleteDetails">You cannot undo it! Are you sure?</string>
    <string name="selectOptionInActivity">Select Option</string>
    <string name="creator">Creator: </string>
    <string name="activityInfo">Activity Info</string>
    <string name="socialMap">Map Discover - Social</string>
    <string name="entertainmentMap">Map Discover - Amusement</string>
    <string name="inspirationMap">Map Discover - Inspiration</string>
    <string name="studyMap">Map Discover - Study</string>
    <string name="friendMap">Map Discover - Friends</string>
    <string name="chat">Chat</string>
    <string name="addTime">Added Time:</string>
    <string name="Private">Private</string>
    <string name="addToCalendar">Add to Calendar</string>
    <string name="YesOrNo">Are you sure?</string>
    <string name="calendarAdded">Added</string>
    <string name="Time">Time</string>

</resources>
